--- a/LumememmAppLaus/LumememmAppLaus/AbsolutePage.xaml
+++ b/LumememmAppLaus/LumememmAppLaus/AbsolutePage.xaml
@@ -1,15 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="LumememmAppLaus.AbsolutePage">
+             x:Class="LumememmAppLaus.AbsolutePage"
+             Title="Lumememm">
     <ContentPage.Content>
         <AbsoluteLayout>
-            <BoxView Color="Red" AbsoluteLayout.LayoutBounds=".1, .2, 50, 80"
-            AbsoluteLayout.LayoutFlags="PositionProportional" />
-            <BoxView Color="Green" AbsoluteLayout.LayoutBounds="1, .2, 50, 80"
-            AbsoluteLayout.LayoutFlags="PositionProportional" />
-            <BoxView Color="Blue" AbsoluteLayout.LayoutBounds=".4, .8, .2, .2"
-            AbsoluteLayout.LayoutFlags="All" />
         </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
