--- a/LumememmAppLaus/LumememmAppLaus/AbsolutePage.xaml
+++ b/LumememmAppLaus/LumememmAppLaus/AbsolutePage.xaml
@@ -4,7 +4,13 @@
              x:Class="LumememmAppLaus.AbsolutePage"
              Title="Lumememm">
     <ContentPage.Content>
-        <AbsoluteLayout>
+        <AbsoluteLayout BackgroundColor="Orange">
+            <BoxView Color="White" AbsoluteLayout.LayoutBounds="0.5, 0.05, 200, 200"
+                     CornerRadius="100" AbsoluteLayout.LayoutFlags="PositionProportional"/>
+            <BoxView Color="White" AbsoluteLayout.LayoutBounds="0.5, 0.365, 225, 225"
+                     CornerRadius="110" AbsoluteLayout.LayoutFlags="PositionProportional"/>
+            <BoxView Color="White" AbsoluteLayout.LayoutBounds="0.5, 0.75, 250, 250"
+                     CornerRadius="120" AbsoluteLayout.LayoutFlags="PositionProportional"/>
         </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
